--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.17.19",
+    "@types/jspdf": "^1.3.3",
     "@vitejs/plugin-react": "^5.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -48,12 +49,14 @@
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.49.3",
+    "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.10.4",
     "sonner": "^1.3.1",
