--- a/package.json
+++ b/package.json
@@ -42,16 +42,19 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.17.19",
     "@types/jspdf": "^1.3.3",
+    "@types/papaparse": "^5.5.0",
     "@vitejs/plugin-react": "^5.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "csv-parser": "^3.2.0",
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^19.1.1",
@@ -66,13 +69,13 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@types/node": "^20.19.17",
+    "@types/node": "^20.19.24",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "vite": "^7.2.1"
   }
 }
