--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.17.19",
+    "@types/dompurify": "^3.2.0",
     "@types/jspdf": "^1.3.3",
     "@types/papaparse": "^5.5.0",
     "@vitejs/plugin-react": "^5.0.3",
@@ -49,6 +50,7 @@
     "cmdk": "^0.2.0",
     "csv-parser": "^3.2.0",
     "date-fns": "^3.0.6",
+    "dompurify": "^3.3.0",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.3",
@@ -58,6 +60,7 @@
     "react": "^19.1.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^19.1.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.21.3",
@@ -74,8 +77,11 @@
     "@types/react-dom": "^19.2.2",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.44.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.1"
+    "vite": "^7.2.1",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
