--- a/api/local.settings.json
+++ b/api/local.settings.json
@@ -3,7 +3,7 @@
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
     "FUNCTIONS_WORKER_RUNTIME": "python",
-    "CANVA_EMAIL": "tatainebarbosa20166@gmail.com",
+    "CANVA_EMAIL": "tatianebarbosa20166@gmail.com",
     "CANVA_PASSWORD": "Tati2025@",
     "BLOB_CONNECTION_STRING": "DefaultEndpointsProtocol=https;AccountName=your_account;AccountKey=your_key;EndpointSuffix=core.windows.net",
     "JWT_SECRET": "your-jwt-secret-key-change-in-production",
