feat: implementar melhorias de segurança e endpoints REST do Canva
🔐 Segurança:
- Remover credenciais hardcoded do código-fonte
- Implementar uso obrigatório de variáveis de ambiente
- Adicionar documentação de configuração segura

🌐 Endpoints REST:
- Implementar GET /api/canva/dados-recentes
- Implementar POST /api/canva/coletar-dados
- Implementar GET /api/canva/metricas/{tipo}
- Adicionar CORS e tratamento de erros

🔄 Retry Logic:
- Criar módulo retry_helper com backoff exponencial
- Suporte para funções síncronas e assíncronas
- Integração com canva_collector

📚 Documentação:
- API_CANVA_DOCUMENTATION.md - Documentação completa da API
- CONFIGURACAO_CANVA.md - Guia de configuração de credenciais
- MELHORIAS_IMPLEMENTADAS.md - Resumo das melhorias

Arquivos criados: 11
Arquivos modificados: 3
Status: ✅ Pronto para deploy

--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,18 @@
 # JWT_SECRET=sua_chave_secreta_aqui
 
 # Outras configurações específicas do backend...
-# Exemplo: CANVA_API_KEY=
 # Exemplo: SCHOOL_DATA_BLOB_CONTAINER=
+
+# ------------------------------------------------------------------
+# Configurações do Canva (OBRIGATÓRIO)
+# ------------------------------------------------------------------
+
+# Credenciais para acesso ao Canva
+# IMPORTANTE: Configure estas variáveis no api/local.settings.json (local)
+# ou no Azure Portal (produção). NUNCA commite credenciais reais!
+CANVA_EMAIL=seu_email@gmail.com
+CANVA_PASSWORD=sua_senha_aqui
+
+# Período padrão para coleta de dados (opcional)
+# Opções: "12 meses", "6 meses", "3 meses", "Últimos 30 dias", "Últimos 14 dias", "Últimos 7 dias"
+CANVA_PERIODO=Últimos 30 dias
