--- a/.github/workflows/main_maplebearsaf.yml
+++ b/.github/workflows/main_maplebearsaf.yml
@@ -11,8 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: '3.12' # set this to the python version to use (supports 3.6, 3.7, 3.8)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'safmaplebear/api' # set this to the path to your web app project, defaults to the repository root
 
 jobs:
   build:
@@ -82,4 +81,5 @@ jobs:
           app-name: 'MapleBearSaf'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+
           
