--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,20 @@
 # Em desenvolvimento, o proxy do vite.config.ts cuida disso, mas é bom ter para builds
 # VITE_API_BASE_URL=http://localhost:7071
 
+# ------------------------------------------------------------------
+# Login tempor?rio do painel (simula??o no frontend)
+# Configure conforme necess?rio para liberar o acesso.
+# ------------------------------------------------------------------
+VITE_ADMIN_EMAIL=temp_admin@mbcentral.com.br
+VITE_ADMIN_PASSWORD=saf123
+VITE_ADMIN_NAME=Admin Temporario
+VITE_ADMIN_ROLE=admin
+# Defina como "true" se precisar bloquear o acesso nas segundas-feiras
+# VITE_ENFORCE_MONDAY_LOGOUT=false
+
+# Limite padrão de licenças por escola (ajustável futuramente)
+VITE_MAX_LICENSES_PER_SCHOOL=2
+
 # Chave de API para serviços externos (se houver)
 # VITE_EXTERNAL_API_KEY=
 
