--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
+    "puppeteer-core": "^22.13.1",
     "react": "^19.1.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^19.1.1",
